--- a/app/src/main/res/layout/activity_league.xml
+++ b/app/src/main/res/layout/activity_league.xml
@@ -11,6 +11,7 @@
         android:layout_width="90dp"
         android:layout_height="33dp"
         android:layout_marginTop="32dp"
+        android:contentDescription="@string/swoosh_logo"
         android:scaleType="fitCenter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -21,6 +22,7 @@
         android:id="@+id/imageView9"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="@string/background_image"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +35,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:contentDescription="@string/desired_league_desc"
         android:fontFamily="@font/montserrat"
-        android:text="Desired League?"
+        android:text="@string/desired_league_txt"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -56,11 +59,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/swoosh_toggle"
+            android:contentDescription="@string/mens_desc"
             android:fontFamily="@font/montserrat"
-            android:text="MENS"
+            android:text="@string/mens_txt"
             android:textColor="@android:color/white"
-            android:textOff="MENS"
-            android:textOn="MENS"
+            android:textOff="@string/mens_txt"
+            android:textOn="@string/mens_txt"
             tools:layout_editor_absoluteX="152dp"
             tools:layout_editor_absoluteY="254dp" />
 
@@ -71,11 +75,12 @@
             android:layout_marginBottom="32dp"
             android:layout_marginTop="32dp"
             android:background="@drawable/swoosh_toggle"
+            android:contentDescription="@string/womens_desc"
             android:fontFamily="@font/montserrat"
-            android:text="WOMENS"
+            android:text="@string/womens_txt"
             android:textColor="@android:color/white"
-            android:textOff="WOMENS"
-            android:textOn="WOMENS"
+            android:textOff="@string/womens_txt"
+            android:textOn="@string/womens_txt"
             tools:layout_editor_absoluteX="152dp"
             tools:layout_editor_absoluteY="254dp" />
 
@@ -84,11 +89,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/swoosh_toggle"
+            android:contentDescription="@string/co_ed_desc"
             android:fontFamily="@font/montserrat"
-            android:text="CO-ED"
+            android:text="@string/co_ed_txt"
             android:textColor="@android:color/white"
-            android:textOff="CO-ED"
-            android:textOn="CO-ED"
+            android:textOff="@string/co_ed_txt"
+            android:textOn="@string/co_ed_txt"
             tools:layout_editor_absoluteX="152dp"
             tools:layout_editor_absoluteY="254dp" />
     </LinearLayout>
@@ -99,8 +105,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:background="@drawable/swoosh_button"
+        android:contentDescription="@string/next_desc"
         android:fontFamily="@font/montserrat"
-        android:text="Next"
+        android:text="@string/next_txt"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView9"
         app:layout_constraintLeft_toLeftOf="parent"
