--- a/app/src/main/res/layout-large-land/activity_league.xml
+++ b/app/src/main/res/layout-large-land/activity_league.xml
@@ -10,8 +10,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/swoosh_button"
+        android:contentDescription="@string/next_desc"
         android:fontFamily="@font/montserrat"
-        android:text="Next"
+        android:text="@string/next_txt"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView10"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -28,44 +29,41 @@
 
         <ToggleButton
             android:id="@+id/toggleButton"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="254dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/swoosh_toggle"
+            android:contentDescription="@string/mens_desc"
             android:fontFamily="@font/montserrat"
-            android:text="MENS"
+            android:text="@string/mens_txt"
             android:textColor="@android:color/white"
-            android:textOff="MENS"
-            android:textOn="MENS" />
+            android:textOff="@string/mens_txt"
+            android:textOn="@string/mens_txt" />
 
         <ToggleButton
             android:id="@+id/toggleButton2"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="254dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:layout_marginTop="32dp"
             android:background="@drawable/swoosh_toggle"
+            android:contentDescription="@string/womens_desc"
             android:fontFamily="@font/montserrat"
-            android:text="WOMENS"
+            android:text="@string/womens_txt"
             android:textColor="@android:color/white"
-            android:textOff="WOMENS"
-            android:textOn="WOMENS" />
+            android:textOff="@string/womens_txt"
+            android:textOn="@string/womens_txt" />
 
         <ToggleButton
             android:id="@+id/toggleButton3"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="254dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/swoosh_toggle"
+            android:contentDescription="@string/co_ed_desc"
             android:fontFamily="@font/montserrat"
-            android:text="CO-ED"
+            android:text="@string/co_ed_txt"
             android:textColor="@android:color/white"
-            android:textOff="CO-ED"
-            android:textOn="CO-ED" />
+            android:textOff="@string/co_ed_txt"
+            android:textOn="@string/co_ed_txt" />
     </LinearLayout>
 
     <ImageView
@@ -73,6 +71,7 @@
         android:layout_width="90dp"
         android:layout_height="33dp"
         android:layout_marginTop="32dp"
+        android:contentDescription="@string/background_image"
         android:scaleType="fitCenter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -84,8 +83,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:contentDescription="@string/desired_league_desc"
         android:fontFamily="@font/montserrat"
-        android:text="Desired League?"
+        android:text="@string/desired_league_txt"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
