--- a/app/src/main/res/layout-large-land/activity_welcome.xml
+++ b/app/src/main/res/layout-large-land/activity_welcome.xml
@@ -10,8 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:contentDescription="@string/go_all_in_desc"
         android:fontFamily="@font/montserrat"
-        android:text="GO ALL IN"
+        android:text="@string/go_all_in_txt"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="46sp"
@@ -23,8 +24,9 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/on_going_all_out_desc"
         android:fontFamily="@font/montserrat"
-        android:text="ON GOING ALL OUT"
+        android:text="@string/on_going_all_out_txt"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="22sp"
@@ -38,9 +40,10 @@
         android:layout_width="176dp"
         android:layout_height="39dp"
         android:layout_marginTop="32dp"
+        android:contentDescription="@string/paragraph_txt"
         android:fontFamily="@font/montserrat"
         android:singleLine="false"
-        android:text="Find a team in your city, and dominate the league"
+        android:text="@string/paragraph_txt"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="16sp"
@@ -49,13 +52,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/getStartedBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:background="@drawable/swoosh_button"
+        android:contentDescription="@string/get_started_desc"
         android:fontFamily="@font/montserrat"
-        android:text="GET STARTED"
+        android:text="@string/get_started_txt"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -65,6 +69,7 @@
         android:id="@+id/imageView3"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="@string/background_image"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,6 +82,7 @@
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginTop="32dp"
+        android:contentDescription="@string/app_name"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
