--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -4,7 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.joemacdonald.swoosh.LeagueActivity">
+    tools:context="me.joemacdonald.swoosh.SkillActivity">
+
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:contentDescription="@string/background_image"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/beginnerballerbg" />
 
     <ImageView
         android:id="@+id/imageView13"
@@ -13,31 +25,20 @@
         android:layout_marginTop="32dp"
         android:contentDescription="@string/swoosh_logo"
         android:scaleType="fitCenter"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView9"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/swooshlogo" />
 
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/background_image"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/desiredleaguebg" />
-
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:contentDescription="@string/desired_league_desc"
+        android:contentDescription="@string/i_am_a_desc"
         android:fontFamily="@font/montserrat"
-        android:text="@string/desired_league_txt"
+        android:text="@string/i_am_a_txt"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -46,71 +47,72 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView13" />
 
     <LinearLayout
-        android:layout_width="389dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:orientation="vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="170dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ToggleButton
-            android:id="@+id/toggleButton"
-            android:layout_width="match_parent"
+            android:id="@+id/toggleButton4"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
             android:background="@drawable/swoosh_toggle"
-            android:contentDescription="@string/mens_desc"
             android:fontFamily="@font/montserrat"
-            android:text="@string/mens_txt"
+            android:text="@string/novice_txt"
+            android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textOff="@string/mens_txt"
-            android:textOn="@string/mens_txt"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="254dp" />
+            android:textOff="@string/novice_txt"
+            android:textOn="@string/novice_txt" />
 
         <ToggleButton
-            android:id="@+id/toggleButton2"
-            android:layout_width="match_parent"
+            android:id="@+id/toggleButton5"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
             android:background="@drawable/swoosh_toggle"
-            android:contentDescription="@string/womens_desc"
+            android:contentDescription="@string/intermediate_txt"
             android:fontFamily="@font/montserrat"
-            android:text="@string/womens_txt"
+            android:text="@string/intermediate_txt"
+            android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textOff="@string/womens_txt"
-            android:textOn="@string/womens_txt"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="254dp" />
+            android:textOff="@string/intermediate_txt"
+            android:textOn="@string/intermediate_txt" />
 
         <ToggleButton
-            android:id="@+id/toggleButton3"
-            android:layout_width="match_parent"
+            android:id="@+id/toggleButton6"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
             android:background="@drawable/swoosh_toggle"
-            android:contentDescription="@string/co_ed_desc"
+            android:contentDescription="@string/expert_txt"
             android:fontFamily="@font/montserrat"
-            android:text="@string/co_ed_txt"
+            android:text="@string/expert_txt"
+            android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textOff="@string/co_ed_txt"
-            android:textOn="@string/co_ed_txt"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="254dp" />
+            android:textOff="@string/expert_txt"
+            android:textOn="@string/expert_txt" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/leagueNextBtn"
+        android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:background="@drawable/swoosh_button"
-        android:contentDescription="@string/next_desc"
+        android:contentDescription="@string/finish_txt"
         android:fontFamily="@font/montserrat"
-        android:onClick="leagueNextClicked"
-        android:text="@string/next_txt"
+        android:text="@string/finish_txt"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
