--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#3f3f3f</color>
     <color name="colorPrimaryDark">#3f3f3f</color>
-    <color name="colorAccent">#3f3f3f</color>
+    <color name="colorAccent">#ffffff</color>
     <color name="colorTransparent">#64000000</color>
 </resources>
