--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.joemacdonald.swoosh.controller.SkillActivity">
+    tools:context="me.joemacdonald.swoosh.Controller.SkillActivity">
 
     <ImageView
         android:id="@+id/imageView17"
